# Secure-Messaging-System

./: Architecture.md  Code_OF_Conduct.md  Contributing.md  Governance.md  README.md  Security.md  pyproject.toml
secure-chat/client/: app.py
secure-chat/client/crypto/: aes.py  identity.py  kdf.py  key_change.py  session.py  signatures.py  storage_crypto.py
secure-chat/client/models/: application_state.py  auth_token.py  chat_history.py  contact.py  contact_request.py  contact_verification.py  device.py  login_request.py  login_response.py  message.py  message_record.py  message_status.py  profile.py  register_request.py  register_response.py  session.py  settings.py  user.py
secure-chat/client/network/: api_client.py  auth_client.py  connection_state.py  contact_directory.py  heartbeat.py  message_dispatcher.py  packet_receiver.py  packet_sender.py  reconnect_manager.py  secure_messenger.py  session_manager.py  websocket_client.py
secure-chat/client/storage/: chat_store.py  contact_store.py  secure_chat_store.py  session_store.py  settings_store.py  (+2 more)
secure-chat/docs/: Dataflow-diagrams.md  Roadmap.md  api_reference.md  attack_surface.md  audit_report.md  cryptography.md  deployment.md  glossary.md  incident_responses.md  key-management.md  protocol_design.md  security-requirements.md  testing-strategy.md  threat_model.md  websocket_protocol.md
secure-chat/server/: auth.py  database.py  init.py  main.py  requirements.txt  websocket_server.py
secure-chat/shared/: constants.py  packet.py  protocol.py  replay_cache.py  security.py  serialization.py
(+28 files in other folders)
