[project]
name = "secure-messaging-system"
version = "1.0.0"
description = "Zero-Trust End-to-End Encrypted Secure Messaging System"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Tri ND" }
]

license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "cryptography>=43.0.0",
    "pynacl>=1.5.0",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.9.0",
    "pydantic>=2.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = [
    "routes"
]
